icell/tests/compile_fail/runtime/outlives-2.stderr
error[E0505]: cannot move out of `value` because it is borrowed
  --> $DIR/outlives-2.rs:11:10
   |
9  |     let x = owner.read(&value);
   |                        ------ borrow of `value` occurs here
10 | 
11 |     drop(value);
   |          ^^^^^ move out of `value` occurs here
12 | 
13 |     assert_eq!(*x, 10);
   |     ------------------- borrow later used here
